--- a/Views/Prodotti/AggiungiProdotto.cshtml
+++ b/Views/Prodotti/AggiungiProdotto.cshtml
@@ -8,12 +8,13 @@
         <div class="col-lg-9 mx-auto rounded border p-4">
             <h1 class="text-center mb-5">@ViewData["Title"]</h1>
 
-            <form asp-action="AggiungiProdotto" method="post" class="g-3">
+            <form asp-action="AggiungiProdotto" method="post" enctype="multipart/form-data" class="g-3">
 
                 <div class="form-group row mb-3">
                     <label asp-for="Orologio.Nome" class="col-sm-4 control-label">Nome</label>
                     <div class="col-sm-8">
-                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Nome" placeholder="nome">
+                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Nome"
+                            placeholder="nome">
                         <!--<span asp-validation-for="Orologio.Nome" class="text-danger"></span>-->
                     </div>
                 </div>
@@ -21,7 +22,8 @@
                 <div class="form-group row mb-3">
                     <label class="col-sm-4 control-label">Prezzo</label>
                     <div class="col-sm-8">
-                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Prezzo" placeholder="prezzo">
+                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Prezzo"
+                            placeholder="prezzo">
                         <!--<span asp-validation-for="Orologio.Prezzo" class="text-danger"></span>-->
                     </div>
                 </div>
@@ -29,7 +31,8 @@
                 <div class="form-group row mb-3">
                     <label class="col-sm-4 control-label">Giacenza</label>
                     <div class="col-sm-8">
-                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Giacenza" placeholder="giacenza">
+                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Giacenza"
+                            placeholder="giacenza">
                         <!--<span asp-validation-for="Orologio.Giacenza" class="text-danger"></span>-->
                     </div>
                 </div>
@@ -37,7 +40,8 @@
                 <div class="form-group row mb-3">
                     <label class="col-sm-4 control-label">Colore</label>
                     <div class="col-sm-8">
-                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Colore" placeholder="colore">
+                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Colore"
+                            placeholder="colore">
                         <!--<span asp-validation-for="Orologio.Colore" class="text-danger"></span>-->
                     </div>
                 </div>
@@ -45,8 +49,10 @@
                 <div class="form-group row mb-3">
                     <label class="col-sm-4 control-label">Immagine</label>
                     <div class="col-sm-8">
-                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.UrlImmagine" placeholder="immagine">
-                        <!--<span asp-validation-for="Orologio.UrlImmagine" class="text-danger"></span>-->
+                        <!-- Input per caricare file -->
+                        <input type="file" class="form-control bg-dark text-light border-secondary"
+                            asp-for="ImmagineCaricata" accept="image/*">
+                        <!--<span asp-validation-for="ImmagineCaricata" class="text-danger"></span>-->
                     </div>
                 </div>
 
@@ -81,7 +87,8 @@
                 <div class="form-group row mb-3">
                     <label class="col-sm-4 control-label">Modello</label>
                     <div class="col-sm-8">
-                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Modello" placeholder="modello">
+                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Modello"
+                            placeholder="modello">
                         <!--<span asp-validation-for="Orologio.Modello" class="text-danger"></span>-->
                     </div>
                 </div>
@@ -89,7 +96,8 @@
                 <div class="form-group row mb-3">
                     <label class="col-sm-4 control-label">Referenza</label>
                     <div class="col-sm-8">
-                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Referenza" placeholder="referenza">
+                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Referenza"
+                            placeholder="referenza">
                         <!--<span asp-validation-for="Orologio.Referenza" class="text-danger"></span>-->
                     </div>
                 </div>
@@ -125,7 +133,8 @@
                 <div class="form-group row mb-3">
                     <label class="col-sm-4 control-label">Diametro</label>
                     <div class="col-sm-8">
-                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Diametro" placeholder="diametro">
+                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Diametro"
+                            placeholder="diametro">
                         <!--<span asp-validation-for="Orologio.Diametro" class="text-danger"></span>-->
                     </div>
                 </div>
@@ -146,7 +155,6 @@
 
                 <div class="row mt-4">
                     <div class="offset-sm-4 col-sm-8">
-                        
                         <button type="submit" class="btn btn-custom w-100 rounded-pill">Submit</button>
                     </div>
                 </div>
@@ -162,9 +170,11 @@
         background-color: #121212;
         color: #e0e0e0;
     }
+
     .container.bg-dark {
         background-color: #1e1e1e;
     }
+
     /* Input Field Styles */
     .form-control,
     .form-select {
@@ -172,12 +182,14 @@
         color: #f5f5dc;
         border: 1px solid #555;
     }
+
     .form-control:focus,
     .form-select:focus {
         background-color: #444;
         color: #f5f5dc;
         border-color: #888;
     }
+
     /* Custom Button Style with Pale Cream Color */
     .btn-custom {
         background-color: #f5f5dc;
@@ -185,6 +197,7 @@
         border: none;
         transition: background-color 0.3s ease, color 0.3s ease, border 0.3s ease;
     }
+
     /* Hover Effect */
     .btn-custom:hover {
         background-color: transparent;
