aggiunte sezioni prodotti e carrello a readme

--- a/Views/Prodotti/EliminaProdotto.cshtml
+++ b/Views/Prodotti/EliminaProdotto.cshtml
@@ -16,7 +16,7 @@
             <!-- Product Details on the right -->
             <div class="col-sm-8">
                 <div class="form-group mb-3">
-                    <p><strong>Marca:</strong> @Model.Orologio.Marca</p>
+                    <p><strong>Marca:</strong> @Model.Orologio.Marca.Nome</p>
                     <p><strong>Modello:</strong> @Model.Orologio.Modello</p>
                     <p><strong>Prezzo:</strong> @Model.Orologio.Prezzo €</p>
                     <p><strong>Giacenza:</strong> @Model.Orologio.Giacenza</p>
