--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light custom-navbar border-bottom box-shadow mb-3">
       <div class="container-fluid">
         <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WatchStoreApp</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
@@ -64,11 +64,68 @@
     </main>
   </div>
 
-  <footer class="border-top footer text-muted">
+ @* <footer class="border-top footer text-muted">
     <div class="container">
       &copy; 2024 - WatchStoreApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
-  </footer>
+  </footer>*@
+@*
+  <footer class="text-center text-white" style="background-color: #0a4275;">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+        <!-- Section: CTA -->
+        <section class="">
+            <p class="d-flex justify-content-center align-items-center">
+                <span class="me-3">Register for free</span>
+                <button data-mdb-ripple-init type="button" class="btn btn-outline-light btn-rounded">
+                    Sign up!
+                </button>
+            </p>
+        </section>
+        <!-- Section: CTA -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2024 Copyright:
+        <a class="text-white" href="https://entefire.it/fire/">Ente Fire</a>
+    </div>
+    <!-- Copyright -->
+</footer> *@
+
+<footer class="text-center text-white" style="background-color: #212529;"><!--#0a4275-->
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+        <!-- Section: Contattaci -->
+        <section class="">
+            <p class="d-flex justify-content-center align-items-center">
+                <span class="me-3">Contattaci:</span>
+                <a href="https://entefire.it/fire/" class="text-white me-4" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-instagram fa-2x"></i>
+                </a>
+                <a href="https://entefire.it/fire/" class="text-white me-4" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-linkedin fa-2x"></i>
+                </a>
+                <a href="https://entefire.it/fire/" class="text-white" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-facebook fa-2x"></i>
+                </a>
+            </p>
+        </section>
+        <!-- Section: Contattaci -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2024 Copyright:
+        <a class="text-white" href="https://entefire.it/fire/">Ente Fire</a>
+    </div>
+    <!-- Copyright -->
+</footer>
+
+
+
 
   <!-- Bootstrap Bundle (includes Popper) -->
   <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
