aggiunto layout basico n

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,6 +1,6 @@
-html {
+/*html {
   font-size: 14px;
-}
+}*/
 
 @media (min-width: 768px) {
   html {
@@ -15,6 +15,7 @@ html {
 html {
   position: relative;
   min-height: 100%;
+  font-size: 16px;
 }
 /*
 body {
