--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
               style="background: none; border: none; padding: 0">
               <a class="bi bi-bag" style="font-size: 2rem" asp-area="" asp-controller="Carrello" asp-action="Index"></a>
             </button>
-            <span class="badge bg-primary">@ViewData["CartItemCount"]</span>
+            <span class="badge btn-1">@ViewData["CartItemCount"]</span>
           }
           <partial name="_LoginPartial" />
         </div>
