--- a/Views/Gestioni/Index.cshtml
+++ b/Views/Gestioni/Index.cshtml
@@ -46,6 +46,12 @@
                 Aggiungi un prodotto
             </a>
         </div>
+        <div class="col-12 col-md-6 mb-3">
+            <a class="btn btn-custom btn-lg w-100 rounded-pill" 
+                asp-controller="Gestioni" asp-action="ModificaCarousel">
+                Modifica il carousel
+            </a>
+        </div>
     </div>
 </div>
 
