--- a/Views/Gestioni/AggiungiCategoria.cshtml
+++ b/Views/Gestioni/AggiungiCategoria.cshtml
@@ -13,6 +13,6 @@
             <input type="text" id="Nome" name="nome" class="form-control bg-dark text-light border-secondary" required />
         </div>
 
-        <button type="submit" class="btn btn-custom w-100 rounded-pill">Aggiungi</button>
+        <button type="submit" class="btn btn-custom-gestionale w-100 rounded-pill">Aggiungi</button>
     </form>
 </div>
