--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
   </button>
 </div>
 
-<!-- Sezioni Visitate -->
+@* <!-- Sezioni Visitate -->
 <div class="container-fluid py-5">
   <h2 class="text-center mb-4">Categorie</h2>
   <div class="row text-center px-3">
@@ -84,7 +84,7 @@
       </a>
     </div>
   </div>
-</div>
+</div> *@
 
 <!-- Prodotti Carousel -->
 <div class="container-fluid py-5">
@@ -132,7 +132,7 @@
                 <span class="badge bg-dark position-absolute top-0 start-0 m-2">Novità</span>
                 <div class="product-card-image-container">
                   <img
-                    src="https://www.palazzolowatches.com/cdn/shop/files/AP-Royal-Oak-Blue-Dial-41mm-Product.png?v=1717158575"
+                    src="https://image.svizzerireplica.it/par522bcucp.jpg"
                     class="product-card-image" alt="Audemars Piguet">
                 </div>
               </div>
