--- a/Views/Prodotti/DettaglioProdotto.cshtml
+++ b/Views/Prodotti/DettaglioProdotto.cshtml
@@ -116,7 +116,7 @@
     </div>
 
     <!-- Sezione newsletter -->
-    <div class="my-4 text-center">
+    @* <div class="my-4 text-center">
         <h5>Iscriviti alla newsletter</h5>
         <form class="row justify-content-center g-3">
             <div class="col-auto">
@@ -127,7 +127,7 @@
                 <button type="submit" class="btn btn-dark mb-3">Iscriviti</button>
             </div>
         </form>
-    </div>
+    </div> *@
 </div>
 
 <style>
