--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -65,26 +65,26 @@ footer {
     background-color: #1e1e1e;
 }
 
-.btn-custom {
+.btn-custom-gestionale {
     background-color: #909499;
     color: #ffffff;
     border: none;
     transition: background-color 0.3s ease, color 0.3s ease, border 0.3s ease;
 }
 
-.btn-custom:hover {
+.btn-custom-gestionale:hover {
   background-color: transparent;
   color: #ffffff;
   border: 2px solid #b0b0b0; /* Grey border */
 }
 
-.form-control {
+.form-control{
   background-color: #333;
-  color: #f5f5dc;
+  color: #ffffff;
   border: 1px solid #555;
 }
 .form-control:focus {
   background-color: #444;
-  color: #f5f5dc;
+  color: #ffffff;
   border-color: #888;
 }
