--- a/Views/Gestioni/Index.cshtml
+++ b/Views/Gestioni/Index.cshtml
@@ -11,37 +11,37 @@
     <!-- Button Grid -->
     <div class="row text-center">
         <div class="col-12 col-md-6 mb-3">
-            <a class="btn btn-custom btn-lg w-100 rounded-pill" 
+            <a class="btn btn-custom-gestionale btn-lg w-100 rounded-pill" 
                 asp-controller="Gestioni" asp-action="AggiungiCategoria">
                 Aggiungi una categoria
             </a>
         </div>
         <div class="col-12 col-md-6 mb-3">
-            <a class="btn btn-custom btn-lg w-100 rounded-pill" 
+            <a class="btn btn-custom-gestionale btn-lg w-100 rounded-pill" 
                 asp-controller="Gestioni" asp-action="AggiungiMarca">
                 Aggiungi una marca
             </a>
         </div>
         <div class="col-12 col-md-6 mb-3">
-            <a class="btn btn-custom btn-lg w-100 rounded-pill" 
+            <a class="btn btn-custom-gestionale btn-lg w-100 rounded-pill" 
                 asp-controller="Gestioni" asp-action="AggiungiMateriale">
                 Aggiungi un materiale
             </a>
         </div>
         <div class="col-12 col-md-6 mb-3">
-            <a class="btn btn-custom btn-lg w-100 rounded-pill" 
+            <a class="btn btn-custom-gestionale btn-lg w-100 rounded-pill" 
                 asp-controller="Gestioni" asp-action="AggiungiTipologia">
                 Aggiungi una tipologia
             </a>
         </div>
         <div class="col-12 col-md-6 mb-3">
-            <a class="btn btn-custom btn-lg w-100 rounded-pill" 
+            <a class="btn btn-custom-gestionale btn-lg w-100 rounded-pill" 
                 asp-controller="Gestioni" asp-action="AggiungiGenere">
                 Aggiungi un genere
             </a>
         </div>
         <div class="col-12 col-md-6 mb-3">
-            <a class="btn btn-custom btn-lg w-100 rounded-pill" 
+            <a class="btn btn-custom-gestionale btn-lg w-100 rounded-pill" 
                 asp-controller="Prodotti" asp-action="AggiungiProdotto">
                 Aggiungi un prodotto
             </a>
